--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Início - Samuel Gomes, Programador</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="../styles/style.css" />
+  <link rel="stylesheet" href="/public/styles/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -131,7 +131,7 @@
     <section id="about">
       <div id="body-about" class="d-flex flex-column align-items-center mt-3 bg-body shadow-sm">
         <div id="text-about" class="d-flex flex-column align-items-center mt-2 mx-2 bg-tertiary rounded flex-lg-row justify-content-lg-around">
-          <img src="../imgs/foto-rosto-samuel-2.PNG" alt="Foto de Samuel Gomes" width="273" height="278" class=" rounded-circle object-fit-cover my-2 mx-2 shadow-sm"/>
+          <img src="/public/imgs/foto-rosto-samuel-2.PNG" alt="Foto de Samuel Gomes" width="273" height="278" class=" rounded-circle object-fit-cover my-2 mx-2 shadow-sm"/>
           <p id="paragraph-about" style="background-color: inherit; text-align: justify" class="fs-4 mx-1 my-1 lh-sm px-sm-3 py-lg-5 px-lg-5">
             Olá ! me chamo Samuel, sou desenvolvedor <a href="https://www.devmedia.com.br/programador-back-end/42224" target="_blank" rel="noopener noreferrer" class="text-decoration-underline bg-transparent">Back-End.</a> Tenho como principal objetivo criar soluções robustas e
             eficientes. Minha linguagem de expertise é <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" target="_blank" rel="noopener noreferrer" class="text-decoration-underline bg-transparent">JavaScript</a> e desenvolvo soluções escaláveis e de alto desempenho.
@@ -143,13 +143,13 @@
           </p>
         </div>
         <div id="buttons-about" class="d-flex align-items-center bg-body">
-          <a href="../imgs/curriculo.pdf" target="_blank" rel="noopener noreferrer" download="curriculosamuel.pdf" class="btn btn-primary fs-5 my-1 me-3 d-flex align-items-center justify-content-center text-primary">
+          <a href="/public/imgs/curriculo.pdf" target="_blank" rel="noopener noreferrer" download="curriculosamuel.pdf" class="btn btn-primary fs-5 my-1 me-3 d-flex align-items-center justify-content-center text-primary">
             Baixar CV
-            <img class="" src="../imgs/dowload.svg" width="20px" height="20px" style="background-color: inherit;"></p>
+            <img class="" src="/public/imgs/dowload.svg" width="20px" height="20px" style="background-color: inherit;"></p>
           </a>
           <a href="https://github.com/samuelgomesp" target="_blank" rel="noopener noreferrer" class="btn btn-primary fs-5 my-1 ms-3 d-flex align-items-center justify-content-center text-primary">
             GitHub
-            <img class="ms-1" src="../imgs/github.svg" width="20px" height="20px" style="background-color: inherit;"></p>
+            <img class="ms-1" src="/public/imgs/github.svg" width="20px" height="20px" style="background-color: inherit;"></p>
           </a>
         </div>
       </div>
@@ -165,7 +165,7 @@
           <div class="carousel-item active">
             <div class="d-flex justify-content-center align-items-center bg-body mb-3 ">
               <div id="project" class="d-flex flex-column align-items-center my-1 mx-2 py-1 px-1 bg-tertiary rounded" style="max-width: 312px;">
-                <img src="../imgs/app-financas.png" alt="tecnologias" height="210" width="272" class="rounded" style="object-fit: cover;"/>
+                <img src="/public/imgs/app-financas.png" alt="tecnologias" height="210" width="272" class="rounded" style="object-fit: cover;"/>
                 <div class="d-flex flex-column align-items-center mt-1 bg-tertiary">
                   <h3 id="title-description-project" class="fs-1 bg-tertiary text-center">Página de Controle Financeiro</h3>
                   <p id="description-project" class="fs-4 lh-sm bg-tertiary" style="text-align: justify;">Este é um projeto no qual desenvolvi uma página para auxiliar o controle de finanças, podendo ser usada por exemplo para controle de gastos do mês, detalhar despesas e controlar fluxo de ganhos e gastos.</p>
@@ -177,7 +177,7 @@
           <div class="carousel-item">
             <div class="d-flex justify-content-center align-items-center bg-body mb-3 ">
               <div id="project" class="d-flex flex-column align-items-center my-1 mx-2 py-1 px-1 bg-tertiary rounded" style="max-width: 312px;">
-                <img src="../imgs/app-playlist.jpg" alt="tecnologias" width="272" height="210" class="rounded"/>
+                <img src="/public/imgs/app-playlist.jpg" alt="tecnologias" width="272" height="210" class="rounded"/>
                 <div class="d-flex flex-column align-items-center mt-1 bg-tertiary">
                   <h3 id="title-description-project" class="fs-1 bg-tertiary text-center">Api de Playlist de Músicas</h3>
                   <p id="description-project" class="fs-4 lh-sm bg-tertiary" style="text-align: justify;">Esta é uma Api de Playlists de Músicas. Além de armazenar dados das playlists, a API permite manipulá-los de diversas formas, possibilitando a adição, consulta, atualização e remoção tanto de músicas dentro das playlists quanto das próprias playlists.</p>
@@ -189,7 +189,7 @@
           <div class="carousel-item">
             <div class="d-flex justify-content-center align-items-center bg-body mb-3 ">
               <div id="project" class="d-flex flex-column align-items-center my-1 mx-2 py-1 px-1 bg-tertiary rounded" style="max-width: 312px;">
-                <img src="../imgs/app-productive.png" alt="tecnologias" width="272" height="210" class="rounded" style="object-fit: cover;"/>
+                <img src="/public/imgs/app-productive.png" alt="tecnologias" width="272" height="210" class="rounded" style="object-fit: cover;"/>
                 <div class="d-flex flex-column align-items-center mt-1 bg-tertiary">
                   <h3 id="title-description-project" class="fs-1 bg-tertiary">JS Productive</h3>
                   <p id="description-project" class="fs-4 lh-sm bg-tertiary" style="text-align: justify;">Essa aplicação foi desenvolvida para servir de auxílio para o cumprimento de tarefas, o JS productive é bem dinâmico e simples de se utilizar porém desenvolvido utilizando recursos avançados.</p>
@@ -224,11 +224,11 @@
               digitais inovadoras. Vamos criar algo novo !</p>
             <div id="social-medias"
               class="w-100 py-2 d-flex justify-content-around align-items-center bg-tertiary rounded">
-              <a href="https://www.linkedin.com/in/samuelgomespereira/" target="_blank" rel="noopener noreferrer"><img class="bg-tertiary" src="../imgs/linkedin.svg" alt="linkedin" width="50"
+              <a href="https://www.linkedin.com/in/samuelgomespereira/" target="_blank" rel="noopener noreferrer"><img class="bg-tertiary" src="/public/imgs/linkedin.svg" alt="linkedin" width="50"
                   height="50" /></a>
-              <a href="https://wa.me/+5561996602469" target="_blank" rel="noopener noreferrer"><img class="bg-tertiary" src="../imgs/whatsapp.svg" alt="whatsapp" width="50"
+              <a href="https://wa.me/+5561996602469" target="_blank" rel="noopener noreferrer"><img class="bg-tertiary" src="/public/imgs/whatsapp.svg" alt="whatsapp" width="50"
                   height="50" /></a>
-              <a href="mailto:samuel.gomes.p99@gmail.com" target="_blank" rel="noopener noreferrer"><img class="bg-tertiary" src="../imgs/email.svg" alt="github" width="50" height="50" /></a>
+              <a href="mailto:samuel.gomes.p99@gmail.com" target="_blank" rel="noopener noreferrer"><img class="bg-tertiary" src="/public/imgs/email.svg" alt="github" width="50" height="50" /></a>
             </div>
           </div>
         </div>
