Foto de rosto alterada para uma foto profissional, imagem de app financas alterada conforme atualização do programa

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <section id="about">
       <div id="body-about" class="d-flex flex-column align-items-center mt-3 bg-body shadow-sm">
         <div id="text-about" class="d-flex flex-column align-items-center mt-2 mx-2 bg-tertiary rounded flex-lg-row justify-content-lg-around">
-          <img src="/public/imgs/foto-rosto-samuel-2.PNG" alt="Foto de Samuel Gomes" width="273" height="278" class=" rounded-circle object-fit-cover my-2 mx-2 shadow-sm"/>
+          <img src="/public/imgs/foto-rosto-samuel-2.jpg" alt="Foto de Samuel Gomes" width="273" height="278" class=" rounded-circle object-fit-cover my-2 mx-2 shadow-sm"/>
           <p id="paragraph-about" style="background-color: inherit; text-align: justify" class="fs-4 mx-1 my-1 lh-sm px-sm-3 py-lg-5 px-lg-5">
             Olá ! me chamo Samuel, sou desenvolvedor <a href="https://www.devmedia.com.br/programador-back-end/42224" target="_blank" rel="noopener noreferrer" class="text-decoration-underline bg-transparent">Back-End.</a> Tenho como principal objetivo criar soluções robustas e
             eficientes. Minha linguagem de expertise é <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" target="_blank" rel="noopener noreferrer" class="text-decoration-underline bg-transparent">JavaScript</a> e desenvolvo soluções escaláveis e de alto desempenho.
